fix scrollbar appearing on mouseover of nav links in firefox

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -111,7 +111,7 @@ img {
 }
 
 .nav ul {
-	overflow: auto;
+	overflow: hidden;
 	padding-left: 0;
 	zoom: 1;
 }
